# kube-health-reporter

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build-amd64.yml  build-arm64.yml  build-docker.yml  ci.yml  create-manifest.yml  deploy-helm.yml  release.yml
benches/: parsing_benchmarks.rs
helm/kube-health-reporter/: Chart.yaml  values.yaml
helm/kube-health-reporter/templates/: _helpers.tpl  cronjob.yaml  rbac.yaml  secret-slack.yaml  serviceaccount.yaml
src/: config.rs  kubernetes.rs  lib.rs  main.rs  parsing.rs  slack.rs  types.rs
src/collector/: mod.rs
src/metrics/: base.rs  jobs.rs  mod.rs  nodes.rs  pods.rs  volumes.rs
src/report/: mod.rs
tests/: integration_tests.rs
