[package]
name = "kube-health-reporter"
version = "0.1.0"
edition = "2021"

[lib]
name = "kube_health_reporter"
path = "src/lib.rs"

[[bin]]
name = "kube-health-reporter"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
k8s-openapi = { version = "0.21.1", features = ["v1_26"] }
kube = { version = "0.90.0", default-features = false, features = ["client", "rustls-tls"] }
reqwest = { version = "0.11.27", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
http = "1.1"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.4"
tempfile = "3.8"
criterion = "0.5"

[[bench]]
name = "parsing_benchmarks"
harness = false



